--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^0.25.0",
     "express": "^4.17.2",
     "json-2-csv": "^3.17.0",
     "json2csv": "^5.0.7",
