--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "description": "",
   "dependencies": {
     "express": "^4.17.2",
+    "json-2-csv": "^3.17.0",
+    "json2csv": "^5.0.7",
     "pg": "^8.7.1",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/json2csv": "^5.0.3",
     "@types/node": "^17.0.5",
     "@types/pg": "^8.6.3",
     "tslint": "^6.1.3",
