--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "json2csv": "^5.0.7",
     "pg": "^8.7.1",
     "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.12.0"
+    "tsconfig-paths": "^3.12.0",
+    "jaro-winkler": "^0.2.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jaro-winkler": "^0.2.0",
     "@types/json2csv": "^5.0.3",
     "@types/node": "^17.0.5",
     "@types/pg": "^8.6.3",
