--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aho-corasick-node": "^1.0.2",
     "axios": "^0.25.0",
     "express": "^4.17.2",
+    "jaro-winkler": "^0.2.8",
     "json-2-csv": "^3.17.0",
     "json2csv": "^5.0.7",
     "pg": "^8.7.1",
