--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "json2csv": "^5.0.7",
     "pg": "^8.7.1",
     "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.12.0",
-    "jaro-winkler": "^0.2.8"
+    "tsconfig-paths": "^3.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
