--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jaro-winkler": "^0.2.8",
     "json-2-csv": "^3.17.0",
     "json2csv": "^5.0.7",
+    "knapsack-js": "^1.0.2",
     "pg": "^8.7.1",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0"
